--- a/.github/workflows/check-latest.yml
+++ b/.github/workflows/check-latest.yml
@@ -20,6 +20,6 @@ jobs:
         if: steps.git-check.outputs.modified == 'true'
         run: |
           git config --global user.name 'mundusnine'
-          git config --global user.email 'your-email@users.noreply.github.com'
+          git config --global user.email 'mundusnine@gmail.com'
           git commit -am "New release version"
           git push
