--- a/.github/workflows/check-latest.yml
+++ b/.github/workflows/check-latest.yml
@@ -1,5 +1,7 @@
 name: Get latest release version
 on:
+  repository_dispatch:
+    types: test-workflow
   schedule:
     - cron:  '0 10 * * *'
 jobs:
