--- a/.github/workflows/check-latest.yml
+++ b/.github/workflows/check-latest.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.REPO_SCOPED_TOKEN }}
+          token: ${{ secrets.PASSWORD }}
       - name: Fetch release version
         run: |
           curl -sL https://api.github.com/repos/lua/lua/releases/latest | \
